AC_PREREQ([2.69])
AC_INIT([documentation], m4_esyscmd([build-aux/git-version-gen .tarball-version]), [clamberson@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.15 foreign tar-pax subdir-objects -Wall -Werror -Wno-portability])
AM_SILENT_RULES([yes])
AC_CHECK_PROGS([XSLTPROC], [xsltproc], [AC_MSG_ERROR([no xsltproc found.])])
AC_CHECK_PROGS([XMLCATALOG], [xmlcatalog], [AC_MSG_ERROR([no xmlcatalog found.])])
AC_CHECK_PROGS([FOP], [fop], [AC_MSG_ERROR([no fop found.])])
AX_CHECK_XSL([DOCBOOK], [http://docbook.sourceforge.net/release/xsl/current/fo/docbook.xsl])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
